build data quality component

--- a/notebooks/test_presets.ipynb
+++ b/notebooks/test_presets.ipynb
@@ -787,8 +787,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "983c014f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "with open('chicago-quality.html', 'r') as f:\n",
+    "    # soup = BeautifulSoup(f.read(), 'html.parser')\n",
+    "    html = f.read()\n",
+    "\n",
+    "with open('test.html', 'w') as f:\n",
+    "    f.write(html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "928668be",
    "metadata": {},
    "outputs": [],
    "source": []
